Добавил отображение картинок

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <ul>
           <li>
             <img
-              src="/images/what_are_we_doing/box_1.jpg"
+              src="./images/what_are_we_doing/box_1.jpg"
               alt="разработка с нуля"
               width="370"
               height="294"
@@ -77,7 +77,7 @@
           </li>
           <li>
             <img
-              src="/images/what_are_we_doing/box_2.jpg"
+              src="./images/what_are_we_doing/box_2.jpg"
               alt="разработка под мобильные приложения"
               width="370"
               height="294"
@@ -85,7 +85,7 @@
           </li>
           <li>
             <img
-              src="/images/what_are_we_doing/box_3.jpg"
+              src="./images/what_are_we_doing/box_3.jpg"
               alt="дизайн"
               width="370"
               height="294"
@@ -98,7 +98,7 @@
         <ul>
           <li>
             <img
-              src="/images/our_team/product_designer.jpg"
+              src="./images/our_team/product_designer.jpg"
               width="270"
               height="260"
               alt="Игорь Демьяненко"
@@ -108,7 +108,7 @@
           </li>
           <li>
             <img
-              src="/images/our_team/frontend_developer.jpg"
+              src="./images/our_team/frontend_developer.jpg"
               width="270"
               height="260"
               alt="Ольга Репина"
@@ -118,7 +118,7 @@
           </li>
           <li>
             <img
-              src="/images/our_team/marketing.jpg"
+              src="./images/our_team/marketing.jpg"
               width="270"
               height="260"
               alt="Николай Тарасов"
@@ -128,7 +128,7 @@
           </li>
           <li>
             <img
-              src="/images/our_team/ui_designer.jpg"
+              src="./images/our_team/ui_designer.jpg"
               width="270"
               height="260"
               alt="Михаил Ермаков"
