--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
         <a lang="en" href="./">WebStudio</a>
         <ul>
           <li>
-            <a href="">Студия</a>
+            <a href="#">Студия</a>
           </li>
           <li>
-            <a href="">Портфолио</a>
+            <a href="#">Портфолио</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a href="#">Контакты</a>
           </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <section>
@@ -36,31 +38,23 @@
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
             <h3>Пунктуальность</h3>
             <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
             <h3>Планирование</h3>
             <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
+              Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
             <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
       </section>
@@ -84,12 +78,7 @@
             />
           </li>
           <li>
-            <img
-              src="./images/what_are_we_doing/box_3.jpg"
-              alt="дизайн"
-              width="370"
-              height="294"
-            />
+            <img src="./images/what_are_we_doing/box_3.jpg" alt="дизайн" width="370" height="294" />
           </li>
         </ul>
       </section>
