Добавил путь к лого

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav>
-        <a lang="en" href="./">WebStudio</a>
+        <a lang="en" href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="#">Студия</a>
@@ -131,7 +131,7 @@
     <footer>
       <section>
         <h2 hidden>Контакты</h2>
-        <a lang="en" href="./">WebStudio</a>
+        <a lang="en" href="./index.html">WebStudio</a>
         <address>
           <ul>
             <li>
